--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -1,7 +1,8 @@
 {
   "name": "mastering-react",
+  "description": "Udemy course to learn web devolpment with React",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +12,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
