--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
+    "@tanstack/react-query": "^4.32.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
