--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -17,11 +17,14 @@
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "@tanstack/react-query": "^4.32.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@storybook/builder-vite": "^7.2.3",
+    "@storybook/react": "^7.2.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
