--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@storybook/addon-actions": "^7.3.0",
     "@storybook/builder-vite": "^7.2.3",
     "@storybook/react": "^7.2.3",
     "@types/react": "^18.0.37",
