--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.22.10",
     "@storybook/addon-actions": "^7.3.0",
     "@storybook/addon-essentials": "^7.3.0",
+    "@storybook/addon-interactions": "^7.3.0",
     "@storybook/builder-vite": "^7.2.3",
     "@storybook/react": "^7.2.3",
     "@types/react": "^18.0.37",
