--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-actions": "^7.3.0",
     "@storybook/addon-essentials": "^7.3.0",
     "@storybook/addon-interactions": "^7.3.0",
+    "@storybook/addon-links": "^7.3.0",
     "@storybook/builder-vite": "^7.2.3",
     "@storybook/react": "^7.2.3",
     "@types/react": "^18.0.37",
