--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -2,7 +2,7 @@
   "name": "mastering-react",
   "description": "Udemy course to learn web devolpment with React",
   "private": true,
-  "version": "0.0.6",
+  "version": "0.0.7",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -30,6 +30,7 @@
     "@storybook/addon-links": "^7.3.0",
     "@storybook/builder-vite": "^7.2.3",
     "@storybook/react": "^7.2.3",
+    "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
