--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -31,6 +31,7 @@
     "@storybook/builder-vite": "^7.2.3",
     "@storybook/react": "^7.2.3",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
