--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -37,6 +37,7 @@
     "@storybook/builder-vite": "^7.2.3",
     "@storybook/react": "^7.2.3",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.37",
