--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -50,6 +50,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.33.0",
     "@vitest/ui": "^0.34.2",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
