--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -2,7 +2,7 @@
   "name": "mastering-react",
   "description": "Udemy course: web-dev with React",
   "private": true,
-  "version": "0.5.0",
+  "version": "0.5.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -55,6 +55,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^6.0.0",
+    "jsdom": "^22.1.0",
+    "tsdef": "^0.0.14",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
