--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -2,7 +2,7 @@
   "name": "mastering-react",
   "description": "Udemy course: web-dev with React",
   "private": true,
-  "version": "0.5.4",
+  "version": "0.5.7",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "swr": "^2.2.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
