--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -2,7 +2,7 @@
   "name": "mastering-react",
   "description": "Udemy course: web-dev with React",
   "private": true,
-  "version": "0.7.0",
+  "version": "0.8.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -22,46 +22,51 @@
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
-    "@tanstack/react-query": "^4.32.6",
-    "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "swr": "^2.2.2",
-    "uuid": "^9.0.0",
-    "zustand": "^4.4.1"
+    "@tanstack/react-query": "^4.0.10",
+    "axios": "^1.1.3",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-tooltip": "^4.2.21",
+    "recoil": "^0.7.5",
+    "redux": "^4.2.0",
+    "swr": "^1.3.0",
+    "uuid": "^8.3.2",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@storybook/addon-actions": "^7.3.0",
-    "@storybook/addon-essentials": "^7.3.0",
-    "@storybook/addon-interactions": "^7.3.0",
-    "@storybook/addon-links": "^7.3.0",
-    "@storybook/builder-vite": "^7.2.3",
-    "@storybook/react": "^7.2.3",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^6.0.1",
-    "@testing-library/react": "^14.0.0",
+    "@babel/core": "^7.18.9",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-vite": "^0.2.2",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/lodash": "^4.14.197",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@vitest/coverage-c8": "^0.33.0",
-    "@vitest/ui": "^0.34.2",
-    "babel-loader": "^9.1.3",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "gh-pages": "^6.0.0",
-    "jsdom": "^22.1.0",
+    "@types/lodash": "^4.14.182",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
+    "@vitejs/plugin-react": "^2.1.0",
+    "@vitest/coverage-c8": "^0.23.2",
+    "@vitest/ui": "^0.23.2",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-storybook": "^0.6.1",
+    "gh-pages": "^4.0.0",
+    "jsdom": "^20.0.0",
     "tsdef": "^0.0.14",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.1"
+    "typescript": "^4.6.3",
+    "vite": "^3.1.1",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vitest": "^0.23.2"
   }
 }
